# disc

./: Cargo.toml  README.md  build.fish  deploy.fish  docker-compose.yml  kill.fish
migrations/2023-08-03-194058_create_event/: up.sql
migrations/2023-08-30-195539_domain_and_owner/: down.sql  up.sql
src/: main.rs  schema.rs
src/commands/: bing.rs  events.rs  help.rs  mod.rs  on_join.rs  ping.rs
src/db/: setup.rs
src/models/: event.rs
