[package]
name = "disc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2" ] }
dotenvy = "0.15.7"
poise = "0.5.5"
serenity = "0.11.6"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = "1.4.1"
